Endpoint do współdzielenia list zakupów
