# docs/api.yaml
@@ -172,6 +172,40 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
+  /shopping-list/share:
+    post:
+      summary: Share shopping list with friend.
+      operationId: shareShoppingList
+      security:
+        - JWT: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ShoppingListShare'
+      responses:
+        200:
+          description: Shopping list successfully shared.
+        400:
+          description: Bad request, one or more parameters are invalid.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        401:
+          description: Not Authorised.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        404:
+          description: Not found, specified resource not found.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+
   /shopping-list/active:
     get:
       summary: Get active shopping lists.
@@ -193,6 +227,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
+
   /shopping-list/archive:
     get:
       summary: Archive a shopping list.
@@ -478,6 +513,20 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/ShoppingItemAdd'
+    ShoppingListShare:
+      type: object
+      required:
+        - shopping_list_id
+        - friend_id
+      properties:
+        shopping_list_id:
+          type: integer
+          description: ID shopping list to share.
+          example: 1
+        friend_id:
+          type: integer
+          description: ID of friend to share.
+          example: 1
     ShoppingItemAdd:
       type: object
       required:
